--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,6 @@ test {
 
     testLogging {
         events "passed", "skipped", "failed"
-
         showExceptions true
         exceptionFormat "full"
         showCauses true
@@ -28,11 +27,11 @@ test {
 }
 
 application {
-    mainClass.set("seedu.duke.Duke")
+    mainClass = "stackoverflown.StackOverflown"
 }
 
 shadowJar {
-    archiveBaseName = "duke"
+    archiveBaseName = "stackoverflown"
     archiveClassifier = null
 }
 
